metadata-retriever/metadata/objects/Campaign_Member_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CampaignMember__c</fullName>
        <label>CampaignMember</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Change__c</fullName>
        <label>Date of Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Member_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Member History</label>
    <listViews>
        <fullName>Campaign_Approval_Queue_Campaign_Member_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Campaign Approval Queue</label>
        <queue>Campaign_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Campaign Member History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>